Removing Adding basic bdd and benchmark placeholders for now just to get the setup right and will implement as I add features

--- a/crates/message-queue/Cargo.toml
+++ b/crates/message-queue/Cargo.toml
@@ -19,6 +19,10 @@ tokio-test = { workspace = true }
 cucumber = { workspace = true }
 async-trait = { workspace = true }
 
+[[bench]]
+name = "message_queue_bench"
+harness = false
+
 [[test]]
 name = "message_queue_bdd_tests"
 harness = false
