--- a/services/reaper-platform/Cargo.toml
+++ b/services/reaper-platform/Cargo.toml
@@ -10,6 +10,7 @@ policy-engine = { path = "../../crates/policy-engine" }
 message-queue = { path = "../../crates/message-queue" }
 metrics = { path = "../../crates/metrics" }
 axum = { workspace = true }
+anyhow = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -20,6 +21,10 @@ uuid = { workspace = true }
 [dev-dependencies]
 cucumber = { workspace = true }
 async-trait = { workspace = true }
+
+[[bench]]
+name = "platform_bench"
+harness = false
 
 [[test]]
 name = "platform_bdd_tests"
