Updated code and dependencies to have make bench work correctly

--- a/crates/message-queue/Cargo.toml
+++ b/crates/message-queue/Cargo.toml
@@ -16,6 +16,7 @@ tracing = { workspace = true }
 
 [dev-dependencies]
 tokio-test = { workspace = true }
+criterion = { workspace = true }
 cucumber = { workspace = true }
 async-trait = { workspace = true }
 
