--- a/services/reaper-agent/Cargo.toml
+++ b/services/reaper-agent/Cargo.toml
@@ -20,6 +20,7 @@ tower = { workspace = true }
 uuid = { workspace = true }
 
 [dev-dependencies]
+criterion = { workspace = true }
 cucumber = { workspace = true }
 async-trait = { workspace = true }
 hyper = { workspace = true }
