--- a/services/reaper-platform/Cargo.toml
+++ b/services/reaper-platform/Cargo.toml
@@ -19,6 +19,7 @@ tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
 
 [dev-dependencies]
+criterion = { workspace = true }
 cucumber = { workspace = true }
 async-trait = { workspace = true }
 
