Updated code to run more effectively, added more tests and have working bench marks. I have set the target to 10000ns now

--- a/services/reaper-platform/Cargo.toml
+++ b/services/reaper-platform/Cargo.toml
@@ -17,6 +17,8 @@ serde_json = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
+parking_lot = { workspace = true }
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 criterion = { workspace = true }
