--- a/crates/policy-engine/Cargo.toml
+++ b/crates/policy-engine/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "policy-engine"
 version = "0.1.0"
@@ -14,6 +15,7 @@ uuid = { workspace = true }
 dashmap = { workspace = true }
 parking_lot = { workspace = true }
 tracing = { workspace = true }
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tokio-test = { workspace = true }
