--- a/services/reaper-agent/Cargo.toml
+++ b/services/reaper-agent/Cargo.toml
@@ -18,6 +18,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tower = { workspace = true }
 uuid = { workspace = true }
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 criterion = { workspace = true }
