--- a/tools/reaper-cli/Cargo.toml
+++ b/tools/reaper-cli/Cargo.toml
@@ -14,6 +14,8 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
+reqwest = { version = "0.12.23", features = ["json"] }
+uuid = { workspace = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
