--- a/services/reaper-platform/Cargo.toml
+++ b/services/reaper-platform/Cargo.toml
@@ -23,6 +23,7 @@ chrono = { version = "0.4", features = ["serde"] }
 [dev-dependencies]
 criterion = { workspace = true }
 cucumber = { workspace = true }
+reqwest = { workspace = true }
 async-trait = { workspace = true }
 
 [[bench]]
